--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ if(BUILD_EXAMPLES)
     add_subdirectory(example)
 endif()
 if(BUILD_TESTS)
+    enable_testing()
     add_subdirectory(test)
 endif()
 if(BUILD_BENCHMARKS)
