--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(benchmark)
 # find_package(rxcpp)
 
 if(benchmark_FOUND)
-    file(GLOB BENCH_SOURCES ${PROJECT_SOURCE_DIR}/benchmark/*.cpp)
+    file(GLOB BENCH_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
     foreach(bench_file ${BENCH_SOURCES})
         get_filename_component(bench_name ${bench_file} NAME_WE)
